<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 * Copyright (C) 2007-2008 sibyl project
 * http://code.google.com/p/sibyl/
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<resources>

    <!--  PlayerUI -->
    <string name="app_name">Sibyl, mobile your music</string>
    <string name="short_text">lll</string>
    <string name="medium_text">kkkoooppp</string>
    <string name="long_text">aaadddeeevvvcccwww</string>
    
    <string name="titre">Sibyl</string>
    <string name="titre_long">Titre de la chanson qui est tres tres tres tres
        longue</string>
    <string name="artiste">mobile your music</string>
    <string name="artiste_long">Long Artiste is lllooonnnngggg</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="time_zero">00:00</string>
    <string name="separateur">/</string>
    <string name="time_total">05:00</string>
    <string name="next">&gt;&gt;</string>
    <string name="previous">&lt;&lt;</string>

    <!--  PlayListUI -->
    <string name="playList">Playlist</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_playList">Playlist</string>
    <string name="menu_option">Option</string>
    <string name="sep_artiste_song">  -  </string>
    
    <string name="menu_add">Add...</string>
    <string name="menu_new">New...</string>
    <string name="menu_back">Back</string>
    <string name="menu_del">Del...</string>
    <string name="playlistsep"> - </string>
    <string name="dial_deldir">Do you want to Delete this directory ?</string>
    
    
    
    <!--  AddUI -->
    <string name="add_artist">Artiste</string>
    <string name="add_album">Album</string>
    <string name="add_song">Musique</string>
    <string name="add_style">Genre</string>
    <string name="add_smart_playlist">Smart Playlist</string>
    <string name="add_empty_artist">No artist</string>
    <string name="add_empty_album">No album</string>
    <string name="add_empty_song">No song</string>



    <!-- CONFIG -->
	<string name="rep_no">No repeat</string>
    <string name="rep_one">Repeat song</string>
    <string name="rep_all">Repeat All</string>
    <string name="dir">Directory: </string>
    <string name="normal">Normal</string>
    <string name="random">Shuffle</string>
        

    <!-- PLAYLIST -->
    <string name="playlist_random">Random songs</string>
    <string name="playlist_less_played">Less played songs</string>
    <string name="playlist_most_played">Most played songs</string>

    
    
    <!-- META DATA, TAGS -->
    <string name="tags_unknown">Unknown</string>
    
    
    <!-- AlbumUI -->
    <string name="alb_back">Back</string>
    <string name="alb_manual">Manual</string>
    <string name="alb_empty">Your librairie is empty.\n Fill it first</string>
    
    <!-- CoverUI -->
    <string name="cov_back">Back</string>
    <string name="cov_choose">Choose</string>
    
    <!-- ERRORS : Some errors messages and titles -->
    <string name="error_core_service_title">Audio player error</string>
    <string name="error_core_service">The audio player isn't working properly, please try to relaunch the application.</string>
</resources>
